// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> create button group 1`] = `
<div
  aria-label="Group label"
  className="fd-button-group"
  role="group"
>
  <button
    className=" fd-button sap-icon--survey blue"
    disabled={false}
    selected={false}
  />
  <button
    className=" fd-button sap-icon--pie-chart is-selected"
    disabled={false}
    selected={true}
  />
  <button
    className=" fd-button sap-icon--pool"
    disabled={false}
    selected={false}
  />
</div>
`;

exports[`<Button /> create buttons 1`] = `
<button
  className=" fd-button"
  disabled={false}
  selected={false}
>
  Regular Button
</button>
`;

exports[`<Button /> create buttons 2`] = `
<button
  className="fd-button--emphasized"
  disabled={false}
  selected={false}
>
  Emphasized Button
</button>
`;

exports[`<Button /> create buttons 3`] = `
<button
  className=" fd-button fd-button--positive"
  disabled={false}
  selected={false}
>
  Positive Button
</button>
`;

exports[`<Button /> create buttons 4`] = `
<button
  className=" fd-button sap-icon--cart"
  disabled={false}
  selected={false}
>
  Icon Button
</button>
`;

exports[`<Button /> create buttons 5`] = `
<button
  className=" fd-button fd-button--compact"
  disabled={false}
  selected={false}
>
  Compact
</button>
`;

exports[`<Button /> create buttons 6`] = `
<button
  className="fd-button--emphasized is-selected"
  disabled={false}
  selected={true}
>
  Selected State
</button>
`;

exports[`<Button /> create buttons 7`] = `
<button
  className="fd-button--emphasized is-disabled"
  disabled={true}
  selected={false}
>
  Disabled State
</button>
`;

exports[`<Button /> create buttons 8`] = `
<button
  className=" fd-button fd-dropdown__control"
  disabled={false}
  selected={false}
>
  Dropdown Button
</button>
`;

exports[`<Button /> create buttons 9`] = `
<button
  className=" fd-button fd-global-nav__btn"
  disabled={false}
  selected={false}
>
  Navbar button
</button>
`;
